# hammer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  lsan-suppress.txt
include/hammer/: appstate.h  chunkmgr.h  cli.h  error.h  falloc.h  file.h  glsl.h  glthread.h  gui.h  hexagon.h  image.h  local_server.h  map3.h  math.h  mem.h  neighborhood.h  net.h  opensimplex.h  poisson.h  pool.h  ring.h  salloc.h  server.h  server_status.h  time.h  vector.h  version.h  well.h  window.h  world.h
include/hammer/appstate/: client.h  game.h  main_menu.h  manager.h  overworld_generation.h  planet_generation.h  region_generation.h  server_config.h  visualize_tectonic.h  viz_climate.h  viz_stream.h  viz_tectonic.h  world_config.h  worldgen.h
include/hammer/client/: chunkmesh.h  glsl.h  glthread.h  gui.h  window.h
include/hammer/client/appstate/: client.h  godmode.h  main_menu.h  server_config.h  server_discover.h  server_planet_gen.h  server_region_gen.h  transition_table.h  transitions.h
include/hammer/client/appstate/server_planet_gen/: planet_gen_iter_async.h
include/hammer/client/gui/: line.h  map.h  rect.h  text.h
include/hammer/game_states/: basic_worldgen.h  main_menu.h  worldgen_config_menu.h  worldgen_menu.h
include/hammer/gui/: img.h  line.h  map.h  text.h
include/hammer/server/: planet.h  server.h  world.h
include/hammer/server/appstate/: common.h  planet_generation.h  start_local.h  transition_table.h
include/hammer/world/: block.h  chunk.h
include/hammer/worldgen/: biome.h  climate.h  large_scale_world_gen.h  planet.h  region.h  stream.h  tectonic.h  world_opts.h  worldgen.h
resources/shaders/: chunk.fs  chunk.vs  gui_img.fs  gui_line.fs  gui_line.gs  gui_line.vs  gui_map.fs  gui_map.vs  gui_rect.fs  gui_rect.vs  gui_text.fs  gui_text.gs  gui_text.vs  region.fs  region.gs  region.vs  region_generation.vs
script/: make-mp4  make-sdf
scripts/: generate-atlas
src/: appstate.c  chunkmgr.c  cli.c  client.c  error.c  falloc.c  file.c  glsl.c  gui.c  image.c  main.c  map3.c  mem.c  net.c  opensimplex.c  poisson.c  pool.c  ring.c  salloc.c  server.c  time.c  vector.c  version.c  well.c  window.c  world.c
src/appstate/: client.c  game.c  main_menu.c  manager.c  overworld_generation.c  planet_generation.c  region_generation.c  server_planet_gen.c  server_region_gen.c  visualize_tectonic.c  viz_climate.c  viz_stream.c  viz_tectonic.c  world_config.c  worldgen.c
src/client/: appstate.c  chunkmesh.c  glsl.c  window.c
src/client/appstate/: godmode.c  main_menu.c  server_config.c  server_discover.c  server_planet_gen.c  server_region_gen.c  transition_table.c
src/client/appstate/server_planet_gen/: planet_gen_iter_async.c
src/client/gui/: interaction.c  line.c  map.c  rect.c  text.c
src/game_states/: basic_worldgen.c  main_menu.c  worldgen_config_menu.c  worldgen_menu.c
src/gui/: img.c  interaction.c  line.c  map.c  rect.c  text.c
src/posix/: glthread.c  net.c
src/server/: server.c
src/server/appstate/: common.c  planet_generation.c  start_local.c  transition_table.c
src/win32/: glthread.c  net.c
src/worldgen/: biome.c  climate.c  large_scale_world_gen.c  region.c  stream.c  tectonic.c  worldgen.c
